--- a/client/src/index.css
+++ b/client/src/index.css
@@ -67,7 +67,9 @@ body {
 
 .content-container {
 	position: relative;
-	width: 100%;
+	width: 80%;
+	max-width: 450px;
+	margin: 0 auto;
 	height: 500px;
 	bottom: 600px;
 }
@@ -76,11 +78,8 @@ body {
 	color: #38302D;
 	font-family: 'Lato', Helvetica, sans-serif;
 	text-align: center;
-	margin: 0 auto;
 	margin-top: 230px;
 	height: 240px;
-	width: 60%;
-	max-width: 450px;
 	background-color: white;
 	padding: 15px;
 	border: 1px solid #EEEEEE;
@@ -110,9 +109,9 @@ body {
 	margin: 0 auto;
 	margin-top: 200px;
 	height: 340px;
-	width: 80%;
-	max-width: 450px;
-	background-color: white;
+	width: 100%;
+/*	max-width: 450px;
+*/	background-color: white;
 	padding: 0 0 15px 0;
 	border-radius: 3px;
 }
@@ -123,10 +122,12 @@ body {
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    width: 100%;
 }
 
 .nav li {
     display: inline-block;
+    width: 49.5%;
     border-right: 1px solid #bbb;
 }
 
@@ -138,8 +139,10 @@ li a, .dropbtn {
     display: inline-block;
     color: white;
     text-align: center;
-    padding: 14px 8px;
+    padding-top: 14px;
+    padding-bottom: 14px;
     text-decoration: none;
+    width: 100%;
 }
 
 
@@ -159,14 +162,18 @@ li.dropdown {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     pointer-events: auto;
+    width: 49.5%;
+    max-width: 225px;
+
 }
 
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 12px 0px 12px 0px;
     text-decoration: none;
     display: block;
-    text-align: left;
+    text-align: center;
+    max-width: 225px;
 }
 
 .dropdown-content a:hover {
@@ -175,6 +182,14 @@ li.dropdown {
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+.button {
+	transition-duration: 0.4s;
+}
+
+.button:hover {
+	background-color: #0F3B14;
 }
 
 .instructions {
@@ -213,9 +228,17 @@ li.dropdown {
 	cursor: pointer;
 }
 
-.deactive {
-	text-decoration: line-through;
+.disabled {
+	color: #606060 !important;
 	margin: 0;
+}
+
+.disabled:hover p{
+	display: block;
+}
+
+.disabled p {
+	display: none;
 }
 
 .footer {
@@ -348,7 +371,6 @@ li.dropdown {
 
 	.login-container {
 		margin-top: 200px;
-		width: 40%;
 	}
 
 	.content-container {
@@ -357,12 +379,12 @@ li.dropdown {
 
 	.question-container {
 		margin-top: 100px;
-		width: 50%;
-	}
+/*		width: 50%;
+*/	}
 
-	li a, .dropbtn {
+/*	li a, .dropbtn {
 	    padding: 14px 16px;
-	}
+	}*/
 
 	.dropdown-content {
 	    min-width: 160px;
@@ -381,6 +403,8 @@ li.dropdown {
 	.option-list li:hover {
 		background-color: #4CAF50;
 		cursor: pointer;
+		color: black;
+		font-size: 125%;
 	}
 
 	.footer {
