--- a/client/src/index.css
+++ b/client/src/index.css
@@ -178,6 +178,7 @@ li.dropdown {
 
 .dropdown-content a:hover {
 	background-color: #f1f1f1;
+	cursor: pointer;
 }
 
 .dropdown:hover .dropdown-content {
